# unamentis

./: .coderabbit.yaml  .env.example  .gitignore  .mcp.json  .swiftformat  .swiftlint.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  LAUNCH_NOW.md  LICENSE  ONBOARDING_GUIDE.md  Package.swift  QUICKSTART.md  QUICKSTART_STEPS.md  README.md  SECURITY.md  TRADEMARK.md  codecov.yml  project.yml  solution-explorer.json
.claude/: settings.json
UnaMentis/: AGENTS.md  CLAUDE.md  UnaMentisApp.swift
UnaMentis.xcodeproj/: project.pbxproj
VoiceLearn/: Info.plist  VoiceLearnApp.swift
VoiceLearn.xcodeproj/: project.pbxproj
curriculum/: AGENTS.md  AI_PROMPT_LEARNING_SOURCE_CONVERSION.md  CLAUDE.md  MULTILINGUAL_TECHNOLOGY_EVALUATION.md  README.md
docs/: ABOUT.md  AI_SIMULATOR_TESTING.md  AI_TASK_ANALYSIS.md  APPLE_INTELLIGENCE.md  APP_STORE_COMPLIANCE.md  CONTRIBUTING.md  CURRICULUM_SESSION_UX.md  DEBUG_TESTING_UI.md  DEVICE_SETUP_GUIDE.md  ENTERPRISE_ARCHITECTURE.md  OPENTELEMETRY_SPEC.md  (+17 more)
rust/pocket-tts-ios/: .gitignore  ATTRIBUTION.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs
rust/pocket-tts-ios/scripts/: build-ios.sh
rust/pocket-tts-ios/src/: audio.rs  audio_tests.rs  config.rs  config_tests.rs  engine.rs  error.rs  error_tests.rs  lib.rs  lib_tests.rs  pocket_tts.udl  tokenizer.rs
rust/pocket-tts-ios/src/models/: flowlm.rs  mimi.rs  mod.rs  pocket_tts.rs  seanet.rs
rust/pocket-tts-ios/src/modules/: attention.rs  conv.rs  embeddings.rs  layer_norm.rs  mlp.rs  mod.rs  rotary.rs  tests.rs
rust/pocket-tts-ios/swift/: PocketTTSSwift.swift
(+548 files in other folders)
